--- a/po/toomanyfiles.es.1
+++ b/po/toomanyfiles.es.1
@@ -6,7 +6,7 @@ Recover normal files and delete files from a partition.
 .SH SYNOPSIS
 
 toomanyfiles [\-\-help] [\-\-version] [\-\-nofiles] [ \-\-nodeleted| \-\-partition| \-\-output ]
-.SH DESCRIPTION
+.SH DESCRIPCI\('ON
 
 .PP
 This app has the following parameters.
