--- a/po/toomanyfiles.pot
+++ b/po/toomanyfiles.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-24 10:10+0200\n"
+"POT-Creation-Date: 2018-07-24 14:36+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,5 +44,11 @@ msgstr ""
 msgid "Developed by Mariano Muñoz"
 msgstr ""
 
-msgid "Wellcome"
+msgid "Generate docs and i18n"
+msgstr ""
+
+msgid "Seach datetime patterns to delete innecesary files"
+msgstr ""
+
+msgid "Created 1000 files in the directory 'example'"
 msgstr ""
