--- a/po/toomanyfiles.es.1
+++ b/po/toomanyfiles.es.1
@@ -9,7 +9,7 @@ toomanyfiles [\-\-help] [\-\-version] [\-\-nofiles] [ \-\-nodeleted| \-\-partiti
 .SH DESCRIPCI\('ON
 
 .PP
-This app has the following parameters.
+Esta applicaci\('on tiene los siguientes par\('ametros.
 .PP
 .RS
 .B \-\-nofiles
