--- a/locale/toomanyfiles.pot
+++ b/locale/toomanyfiles.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-25 06:34+0200\n"
+"POT-Creation-Date: 2018-07-25 11:13+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -50,6 +50,12 @@ msgstr ""
 msgid "Python path"
 msgstr ""
 
+msgid "Not developed yet"
+msgstr ""
+
+msgid "TooManyFiles was executed at {}"
+msgstr ""
+
 msgid "Remains"
 msgstr ""
 
@@ -62,19 +68,43 @@ msgstr ""
 msgid "Over max number of files"
 msgstr ""
 
-msgid "Seach datetime patterns to delete innecesary files"
+msgid "R"
 msgstr ""
 
-msgid "Defines a python datetime pattern to search in current directory"
+msgid "D"
+msgstr ""
+
+msgid "Y"
+msgstr ""
+
+msgid "O"
+msgstr ""
+
+msgid "File results:"
+msgstr ""
+
+msgid "Over max files"
+msgstr ""
+
+msgid "Created {} files in the directory 'example'"
+msgstr ""
+
+msgid "Seach datetime patterns to delete innecesary files"
 msgstr ""
 
 msgid "Create a example files in directory 'example'"
 msgstr ""
 
-msgid "Removes files permanently. If not selected shows information"
+msgid "Removes files permanently"
 msgstr ""
 
-msgid "Appends information in currrent directory log"
+msgid "Makes a simulation and doesn't remove files"
+msgstr ""
+
+msgid "Defines a python datetime pattern to search in current directory"
+msgstr ""
+
+msgid "Disable log generation"
 msgstr ""
 
 msgid "Remove mode"
@@ -86,5 +116,5 @@ msgstr ""
 msgid "Maximum number of files to remain in directory"
 msgstr ""
 
-msgid "Created 10000 files in the directory 'example'"
+msgid "Error passing parameters"
 msgstr ""
