Added security if two root in directory

--- a/doc/index.dox
+++ b/doc/index.dox
@@ -15,8 +15,8 @@ This project is hosted in SourceForge, so you can use the next services:
 
 - <a href="https://sourceforge.net/p/too-many-files/tickets/" target="_blank">Tickets</a>
 
-Software used to develop Xulpymoney
-===================================
+Software used to develop TooManyFiles
+=====================================
 
 <a target="_blank" href="https://eric-ide.python-projects.org/index.html">Eric</a> is used as the main IDE
 
