--- a/locale/toomanyfiles.es.1
+++ b/locale/toomanyfiles.es.1
@@ -1,22 +1,74 @@
-.TH TOOMANYFILES 1 2018\-07\-25
+.TH TOOMANYFILES 1 2018\-07\-26
 .SH NAME
 
 .B toomanyfiles:
-Recover normal files and delete files from a partition.
+Remove innecesary files with a date and time pattern in the current subdirectory.
 .SH SYNOPSIS
 
-toomanyfiles [\-\-help] [\-\-version] [\-\-nofiles] [ \-\-nodeleted| \-\-partition| \-\-output ]
+toomanyfiles [\-h] [\-\-version] (\-\-create_example | \-\-remove | \-\-pretend)
+                    [\-\-pattern PATTERN] [\-\-disable_log]
+                    [\-\-remove_mode {RemainFirstInMonth,RemainLastInMonth}]
+                    [\-\-too_young_to_delete TOO_YOUNG_TO_DELETE]
+                    [\-\-max_files_to_store MAX_FILES_TO_STORE]
 .SH DESCRIPCI\('ON
 
 .PP
-Esta applicaci\('on tiene los siguientes par\('ametros.
+Esta aplicaci\('on tiene los siguientes par\('ametros obligatorios
 .PP
 .RS
-.B \-\-output
+.B \-\-create_example
 .RE
 .PP
 .RS
 .RS
-Shows all known devices in database from console.
+Create a directory called 'example' in the current working directory and fill it with example files with datetime pattern.
 .RE
+.RE
+.PP
+.RS
+.B \-\-pretend
+.RE
+.PP
+.RS
+.RS
+Makes a simulation selecting which files will be deleted when \-\-remove parameter is used.
+.RE
+.RE
+.PP
+.RS
+.B \-\-remove
+.RE
+.PP
+.RS
+.RS
+Deletes files. Be careful, This functi\('on can't be unmade. Use \-\-pretend before.
+.RE
+.RE
+.PP
+Con \-\-pretend y \-\-remove puedes usar estos par\('ametros
+.PP
+.RS
+.B \-\-pattern
+.RE
+.PP
+.RS
+.RS
+Sets the date and time pattern to search in the current directory filenames. It users python strftime function format.
+.RE
+.RE
+.PP
+.RS
+.B \-\-disable_log
+.RE
+.PP
+.RS
+.B \-\-remove_mode
+.RE
+.PP
+.RS
+.B \-\-too_young_to_delete
+.RE
+.PP
+.RS
+.B \-\-max_files_to_store
 .RE
