--- a/locale/toomanyfiles.en.1
+++ b/locale/toomanyfiles.en.1
@@ -1,4 +1,4 @@
-.TH TOOMANYFILES 1 2018\-07\-26
+.TH TOOMANYFILES 1 2018\-07\-27
 .SH NAME
 
 .B toomanyfiles:
@@ -41,7 +41,7 @@ Makes a simulation selecting which files will be deleted when \-\-remove paramet
 .PP
 .RS
 .RS
-Deletes files. Be careful, This functi\('on can't be unmade. Use \-\-pretend before.
+Deletes files. Be careful, This can't be unmade. Use \-\-pretend before.
 .RE
 .RE
 .PP
@@ -53,7 +53,7 @@ With \-\-pretend and \-\-remove you can use this parameters:
 .PP
 .RS
 .RS
-Sets the date and time pattern to search in the current directory filenames. It users python strftime function format.
+Sets the date and time pattern to search in the current directory filenames. It uses python strftime function format.
 .RE
 .RE
 .PP
