--- a/locale/toomanyfiles.es.1
+++ b/locale/toomanyfiles.es.1
@@ -1,8 +1,8 @@
-.TH TOOMANYFILES 1 2018\-07\-26
+.TH TOOMANYFILES 1 2018\-07\-27
 .SH NAME
 
 .B toomanyfiles:
-Remove innecesary files with a date and time pattern in the current subdirectory.
+Borra ficheros no necesarios que tengan un patr\('on de fecha y hora en el subdirectorio actual.
 .SH SYNOPSIS
 
 toomanyfiles [\-h] [\-\-version] (\-\-create_example | \-\-remove | \-\-pretend)
@@ -21,7 +21,7 @@ Esta aplicaci\('on tiene los siguientes par\('ametros obligatorios
 .PP
 .RS
 .RS
-Create a directory called 'example' in the current working directory and fill it with example files with datetime pattern.
+Crea un directorio llamado 'example' en el el directorio actual y lo llena con ficheros de ejemplo con un patr\('on de fecha y hora.
 .RE
 .RE
 .PP
@@ -31,7 +31,7 @@ Create a directory called 'example' in the current working directory and fill it
 .PP
 .RS
 .RS
-Makes a simulation selecting which files will be deleted when \-\-remove parameter is used.
+Realiza una simulaci\('on seleccionando que ficheros ser\('an borrados cuando se use el par\('ametro \-\-remove.
 .RE
 .RE
 .PP
@@ -41,7 +41,7 @@ Makes a simulation selecting which files will be deleted when \-\-remove paramet
 .PP
 .RS
 .RS
-Deletes files. Be careful, This functi\('on can't be unmade. Use \-\-pretend before.
+Borra los ficheros. Ten cuidado, esto no puede deshacerse. Usa antes \-\-pretend.
 .RE
 .RE
 .PP
@@ -53,7 +53,7 @@ Con \-\-pretend y \-\-remove puedes usar estos par\('ametros
 .PP
 .RS
 .RS
-Sets the date and time pattern to search in the current directory filenames. It users python strftime function format.
+Establece el patr\('on de fecha y hora para buscar en los nombres del directorio actual. Usa el formato de python de la funci\('onde strftime
 .RE
 .RE
 .PP
