Added support to delete directories. Asked in ticket [#7]

--- a/doc/index.dox
+++ b/doc/index.dox
@@ -5,6 +5,8 @@ Introduction
 
 TooManyFiles is an admin script. Used to delete innecesary files finding a datetime pattern in filename
 
+The main web page is located <a src="https://too-many-files.sourceforge.io/">here</a>
+
 Development
 ===========
 - Turulomio (Idea y development)
