--- a/locale/toomanyfiles.en.1
+++ b/locale/toomanyfiles.en.1
@@ -1,8 +1,8 @@
-.TH TOOMANYFILES 1 2018\-07\-27
+.TH TOOMANYFILES 1 2018\-08\-01
 .SH NAME
 
 .B toomanyfiles:
-Remove innecesary files with a date and time pattern in the current subdirectory.
+Remove innecesary files or directories with a date and time pattern in the current directory.
 .SH SYNOPSIS
 
 toomanyfiles [\-h] [\-\-version] (\-\-create_example | \-\-remove | \-\-pretend)
@@ -21,7 +21,7 @@ This app has the following mandatory parameters:
 .PP
 .RS
 .RS
-Create a directory called 'example' in the current working directory and fill it with example files with datetime pattern.
+Create two directories called 'example' and 'example_directories' in the current working directory and fill it with example files with date and time patterns.
 .RE
 .RE
 .PP
