--- a/locale/toomanyfiles.es.1
+++ b/locale/toomanyfiles.es.1
@@ -1,8 +1,8 @@
-.TH TOOMANYFILES 1 2018\-07\-27
+.TH TOOMANYFILES 1 2018\-08\-01
 .SH NAME
 
 .B toomanyfiles:
-Borra ficheros no necesarios que tengan un patr\('on de fecha y hora en el subdirectorio actual.
+Remove innecesary files or directories with a date and time pattern in the current directory.
 .SH SYNOPSIS
 
 toomanyfiles [\-h] [\-\-version] (\-\-create_example | \-\-remove | \-\-pretend)
@@ -21,7 +21,7 @@ Esta aplicaci\('on tiene los siguientes par\('ametros obligatorios
 .PP
 .RS
 .RS
-Crea un directorio llamado 'example' en el el directorio actual y lo llena con ficheros de ejemplo con un patr\('on de fecha y hora.
+Create two directories called 'example' and 'example_directories' in the current working directory and fill it with example files with date and time patterns.
 .RE
 .RE
 .PP
