--- a/man/es/man1/toomanyfiles.1
+++ b/man/es/man1/toomanyfiles.1
@@ -1,15 +1,15 @@
-.TH TOOMANYFILES 1 2018\-08\-02
+.TH TOOMANYFILES 1 2018\-08\-12
 .SH NAME
 
 .B toomanyfiles:
-Remove innecesary files or directories with a date and time pattern in the current directory.
+Borra ficheros o directorios innecesarios, que tengan un patr\('on de fecha y hora en el directorio actual.
 .SH SYNOPSIS
 
 toomanyfiles [\-h] [\-\-version] (\-\-create_example | \-\-remove | \-\-pretend)
-                    [\-\-pattern PATTERN] [\-\-disable_log]
-                    [\-\-remove_mode {RemainFirstInMonth,RemainLastInMonth}]
-                    [\-\-too_young_to_delete TOO_YOUNG_TO_DELETE]
-                    [\-\-max_files_to_store MAX_FILES_TO_STORE]
+                        [\-\-pattern PATTERN] [\-\-disable_log]
+                        [\-\-remove_mode {RemainFirstInMonth,RemainLastInMonth}]
+                        [\-\-too_young_to_delete TOO_YOUNG_TO_DELETE]
+                        [\-\-max_files_to_store MAX_FILES_TO_STORE]
 .SH DESCRIPCI\('ON
 
 .PP
@@ -21,7 +21,7 @@ Esta aplicaci\('on tiene los siguientes par\('ametros obligatorios
 .PP
 .RS
 .RS
-Create two directories called 'example' and 'example_directories' in the current working directory and fill it with example files with date and time patterns.
+Crea dos directorios de nombre 'example' y 'example_directories' en el directorio actual y los llena con ficheros de ejemplo que tengan patr\('ones de fecha y hora.
 .RE
 .RE
 .PP
