--- a/doc/index.dox
+++ b/doc/index.dox
@@ -27,7 +27,7 @@ TooManyFiles depends on the following software:
 - <a target="_blank" href="https://pypi.org/project/colorama/">Colorama</a>, to give color to console output.
 
 
-\page Howto
+\page Howto "Howto"
 
 TooManyFiles Use
 ================
